--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -1,4 +1,4 @@
-@import "../assets/tailwind.css";
+//@import "../assets/tailwind.css";
 #app {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
