--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -14,3 +14,7 @@ a:hover, .uk-link:hover, .uk-link-toggle:hover .uk-link {
 :focus-visible {
   outline: none !important;
 }
+
+html, body {
+  height: 100%;
+}
